# python-webcitizen-audit

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb  todos.txt
docs/source/: conf.py  index.rst
docs/source/_autosummary/: webcitizen.audits.rst  webcitizen.extraction.rst  webcitizen.rst
sphinx-docs/: conf.py  index.rst
sphinx-docs/_build/doctrees/: environment.pickle  index.doctree
sphinx-docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx-docs/_build/html/_modules/: index.html
sphinx-docs/_build/html/_modules/webcitizen/: webpage.html
src/myproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/webcitizen/: __init__.py  audits.py  extraction.py  webpage.py
src/webcitizen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/webcitizen_boss333/: example.html  webcitizen.py
