[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcitizen"
version = "0.0.50"
description = "SEO audits for websites using Python."
readme = "README.md"
keywords = ["seo","accessibility","webcitizen", "webcitizen-audit", "webcitizen-python", "webcitizen-seo", "webcitizen-audit-python"]
dependencies = [
    "beautifulsoup4",
    "newspaper3k",
    "pyap",
]
authors = [
    {name = "Prasanna Kulkarni", email = "prasanna.k158@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/prasannakulkarni333/python-webcitizen-audit"
Documentation = "https://webcitizen.prasannakulkarni.com"
Repository = "https://github.com/prasannakulkarni333/python-webcitizen-audit"
Issues = "https://github.com/prasannakulkarni333/python-webcitizen-audit/issues"